# face-recognition-web-application

./: README.md  nx.json  package-lock.json  package.json
apps/Frontend/: jest.config.ts  project.json
apps/Frontend/src/app/: app.component.spec.ts  app.component.ts  nx-welcome.component.ts
apps/Gateway/: jest.config.ts  project.json  webpack.config.js
apps/Gateway/src/: main.ts
apps/Gateway/src/app/: app.module.ts
apps/Gateway/src/app/realtime-video-handler/: socket.gateway.ts  socket.module.ts
apps/Gateway/src/app/video/: video.gateway.ts  ws.adapter.ts
apps/Realtime-Image-Transmission/: README.md  project.json  pyproject.toml
apps/Realtime-Image-Transmission/realtime_image_transmission/: index.py
apps/Realtime-Image-Transmission/tests/: test_index.py
